--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -1,12 +1,30 @@
 [[docs]]
-  name = "Prologue"
+  name = "First Step"
   weight = 10
-  identifier = "prologue"
-  url = "/docs/prologue/"
+  identifier = "first-step"
+  url = "/docs/first-step/"
+
+[[docs]]
+  name = "Example"
+  weight = 20
+  identifier = "example"
+  url = "/docs/example/"
+
+[[docs]]
+  name = "Homogeneous"
+  weight = 110
+  identifier = "example"
+  url = "/docs/example/homogeneous/"
+
+[[docs]]
+  name = "Homogeneous"
+  weight = 120
+  identifier = "example"
+  url = "/docs/example/heterogeneous/"
 
 [[docs]]
   name = "Help"
-  weight = 1
+  weight = 30
   identifier = "help"
   url = "/docs/help/"
 
@@ -16,60 +34,79 @@
 #  identifier = "loremtest"
 #  url = "/docs/lorem/"
 
-[[guide]]
-  name = "Lorem"
-  weight = 10
-  identifier = "lorem"
-  url = "/guide/lorem/"
+#[[guide]]
+#  name = "Lorem"
+#  weight = 10
+#  identifier = "lorem"
+#  url = "/guide/lorem/"
+#
+#[[tutorial]]
+#  name = "Lorem"
+#  weight = 10
+#  identifier = "lorem"
+#  url = "/tutorial/lorem/"
 
-[[tutorial]]
-  name = "Lorem"
+[[main]]
+  name = "Features"
+  url = "/features/"
   weight = 10
-  identifier = "lorem"
-  url = "/tutorial/lorem/"
+
+[[main]]
+  name = "Download"
+  url = "/download/"
+  weight = 30
+
+[[main]]
+  name = "About us"
+  identifier = "about-us"
+  url = "/about-us/"
+  weight = 80
 
 [[main]]
   name = "Docs"
-  url = "/docs/prologue/introduction/"
-# url = "/docs/1.0/prologue/introduction/"
-  weight = 10
-
-[[main]]
-  name = "About Us"
-  url = "https://www.m-design-lab.net"
-  weight = 60
-
-[[main]]
-  name = "Blog"
-  url = "/blog/"
+  url = "/docs/first-step/introduction/"
   weight = 20
 
-[[main]]
-  name = "Get Started"
-  weight = 30
-  identifier = "get-started"
-  url = "/docs/prologue/introduction/"
+#[[main]]
+#  name = "Blog"
+#  url = "/blog/"
+#  weight = 20
 
 [[main]]
-  name = "Quick Start"
+  name = "Community"
+  weight = 70
+  identifier = "community"
+  url = "/docs/first-step/installation/"
+
+[[main]]
+  name = "FAQ"
   weight = 40
-  identifier = "quick-start"
-  url = "/docs/prologue/quick-start/"
-  parent = "get-started"
+  url = "/docs/help/faq/"
+  parent = "community"
 
 [[main]]
-  name = "Tutorial"
-  weight = 50
-  identifier = "tutorial"
-  url = "https://getdoks.org/tutorial/introduction/"
-  parent = "get-started"
-
-[[social]]
   name = "GitHub"
-  pre = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\" class=\"feather feather-github\"><path d=\"M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22\"></path></svg>"
-  url = "https://github.com/h-enk/doks"
-  post = "v0.1.0"
-  weight = 10
+  weight = 50
+  url = "https://github.com/dft-ces/dft-ces2/"
+  parent = "community"
+
+[[main]]
+  name = "DFT-CES Forum"
+  weight = 60
+  url = "https://groups.google.com/u/2/g/dft-ces-forum/"
+  parent = "community"
+
+#[[main]]
+#  name = "About Us"
+#  url = "/about-us/"
+#  weight = 70
+
+#[[social]]
+#  name = "GitHub"
+#  pre = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\" class=\"feather feather-github\"><path d=\"M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22\"></path></svg>"
+#  url = "https://github.com/dft-ces/dft-ces2"
+#  post = "v0.1.0"
+#  weight = 10
 
 #[[social]]
 #  name = "Twitter"
